Fixed an error in which the background image did not display correctly on mobile portrait view

--- a/src/projectIntro.css
+++ b/src/projectIntro.css
@@ -121,6 +121,11 @@ body.noScroll {overflow: hidden !important;}
 .projectIntroContent.mobile > div {max-width: unset;}
 
 
+@media screen and (max-width: 900px),
+screen and (max-height: 350px) {
+    .projectIntroContent {border-radius: unset;}
+}
+
 @media screen and (max-width: 700px) {
     .projectIntroContent > img {
         position: absolute;
@@ -129,20 +134,23 @@ body.noScroll {overflow: hidden !important;}
         max-width: 100%;
         opacity: .1;
     }
-    .projectIntroContent.mobile > img {display: none;}
+    .projectIntroContent > div {max-width: 100%;}
     .projectIntroContent > div,
     .projectIntroContent > span {z-index: 1;}
-    .projectIntroContent > div {max-width: 100%;}
 }
 
 @media screen and (max-width: 300px) {
     .projectIntroContent > img {
         height: 100%;
+        width: unset;
         max-width: unset;
     }
 }
 
-@media screen and (max-width: 900px),
-screen and (max-height: 350px) {
-    .projectIntroContent {border-radius: unset;}
+@media screen and (orientation: portrait) {
+    .projectIntroContent.mobile > img {
+        height: 100%;
+        width: unset;
+        max-width: unset;
+    }
 }
